--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ ENDIF()
 #SET(Boost_DEBUG  ON)
 SET(BOOST_LIBRARYDIR    /usr/local/lib/)
 
-FIND_PACKAGE(boost)
+FIND_PACKAGE(Boost 1.53.0 REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} )
 LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
 
